--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "maatwebsite/excel": "^3.1",
+        "overtrue/laravel-emoji": "*",
         "yajra/laravel-datatables-oracle": "^11.1"
     },
     "require-dev": {
