--- a/.env.example
+++ b/.env.example
@@ -13,18 +13,18 @@ APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
 
 BCRYPT_ROUNDS=12
-
 LOG_CHANNEL=stack
 LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=sociteymangement
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=sociteymangement
+DB_USERNAME=root
+DB_PASSWORD=
+
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -46,14 +46,15 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=nirali.saurabhinfosys@gmail.com
+MAIL_PASSWORD=odtoumarhlhjpuib
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=nirali.saurabhinfosys@gmail.com
+MAIL_FROM_NAME="Society Management"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
